FIX: inbox resizing, header pixelgap

--- a/files/discord-mods/themes/responsive-discord.css
+++ b/files/discord-mods/themes/responsive-discord.css
@@ -2,7 +2,7 @@
  * @name Greens Responsive Discord
  * @author GreenMan36#0633
  * @authorLink https://github.com/GreenMan36
- * @version 31.01.23a
+ * @version 05.02.23a
  * @description A theme that tries to make Discord's sidebars adapt when resizing your window.
 */
 
@@ -19,7 +19,7 @@
 /* used for theme name and version, DO NOT TOUCH */
 :root {
     --theme-name: "Greens Responsive Discord";
-    --version: "31.01.23a";
+    --version: "05.02.23a";
 }
 
 /* these can be customized. just copy/paste the whole thing into your custom CSS and mess around with it. */
@@ -170,10 +170,14 @@ a.anchor-1MIwyf.anchorUnderlineOnHover-2qPutX.snowsgivingLink-1TZi3c{
 .recentMentionsPopout-2bI1ZN {
     width: 100%;
     height: 100%;
-    max-height: 80vh;
-    max-width: 50vw;
+    min-height: 80vh;
+    min-width: 50vw;
     transition: all .5s ease-out;
     transition-property: max-height, max-width, width, height;
+}
+/* fix inbox header */
+.channelHeader-DFRX8q {
+    top: -1px
 }
 
 @media (max-width: 1400px) {
